# pdfsmith

./: .gitignore  README.md  pyproject.toml  test.md
src/convert2pdf/: cli.py  handlers.py  utils.py
src/pdfsmith/: cli.py  handlers.py
tests/: test_smoke.py
